--- a/style.css
+++ b/style.css
@@ -38,19 +38,23 @@ body{
     display: grid;
     grid-template-columns:200px 1fr;
   }
-  /*
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-  ##Device = 대부분의 스마트폰 모바일 기기(세로)
-  ##Screen = 320px에서 479px 사이
-  */
+  /* For desktop: */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
-  @media (min-width: 320px) and (max-width: 480px) {
-    #grid{
-      display:block;
-    }
-    ol{
-      border-right:none;
-    }
-  
-  //
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
