--- a/style2.css
+++ b/style2.css
@@ -1,58 +1,49 @@
-/* For mobile phones: */
+*{
+  box-sizing: border-box;
+}
+.grid::after {
+  content: "";
+  clear: both;
+  display: block;
+}
 [class*="col-"] {
-  width: 100%;
+  float:left;
+  padding: 15px;
 }
-p{
-  text-align: center;
-  font-size: 20px;
-}
-br{
-  text-align: center;
-}
-body{
-  margin:0;
-}
-  a {
-    color:gray;
-    text-decoration: none;
-  }
-  h1{
-    font-size: 50px;
-    text-align: center;
-    border-bottom:1px solid gray;
-    margin:0;
-    padding:20px;
-  }
-  ol{
-    border-bottom:1px solid gray;
-    text-align: center;
-    margin:0;
-    padding:30px;
-    font-size:20px;
-    list-style-type: none;
-  }
-  h2{
-    font-size: 45px;
-    text-align: center;
-  }
-  h3{
-    font-size:35px;
-    text-align: center;
-  }
+html {
+  font-family: "Malgun Gothic", serif;
 
-@media only screen and (min-width: 768px) {
+}
+body {
+  color : black;
+
+}
+.header {
+  background-color: #9933cc;
+  color: white;
+  padding: 15px;
+}
+.menu ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+.menu li {
+  padding: 8px;
+  margin-bottom: 7px;
+  background-color: #33b5e5;
+  color:white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.menu li:hover {
+  background-color: #0099cc;
+}
+/* For mobile phones: */
+[class*="col-"] {width: 100%;}
+
+@media (min-width: 768px) {
   /* For desktop: */
-  #grid{
-    display: grid;
-    grid-template-columns:200px 1fr;
-  }
-  #ba{
-    border-right:1px solid gray;
-    width:200px;
-    margin:0;
-    padding:30px;
-    font-size:20px;
-    list-style-type: square;
-    
-  }
+  .col-1 {width:15%;}
+  .col-2 {width:70%;}
 }
