--- a/style2.css
+++ b/style2.css
@@ -19,7 +19,7 @@ body {
 
 }
 .header {
-  background-color: #9933cc;
+  background-color: purple;
   color: white;
   padding: 15px;
 }
@@ -33,7 +33,7 @@ body {
 .menu li {
   padding: 8px;
   margin-bottom: 7px;
-  background-color: #33b5e5;
+  background-color: skyblue;
   color:white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
