--- a/style2.css
+++ b/style2.css
@@ -19,7 +19,7 @@ body {
 
 }
 .header {
-  background-color: purple;
+  background-color: #9933cc;
   color: white;
   padding: 15px;
 }
@@ -30,10 +30,11 @@ body {
   color: white;
 }
 
+
 .menu li {
   padding: 8px;
   margin-bottom: 7px;
-  background-color: skyblue;
+  background-color: #33b5e5;
   color:white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
